test/corpus/arrays/multi-dimensional-arrays.txt
========================
Multi-dimensional array
========================

// declare 4 by 6 by 8 array of float
float foo3D[4][6][8];

---

(source_file
  (comment)
  (array_declaration
    (primitive_type)
    (array_identifier
      (variable_identifier)
      (int)
      (int)
      (int))))

==============
Initialization
==============

// declare 2 by 2 array of int
[ [1,3], [2,4] ] @=> int bar[][];

---

(source_file
  (comment)
  (chuck_operation
    (array
      (array
        (int)
        (int))
      (array
        (int)
        (int)))
    (array_declaration
      (primitive_type)
      (array_identifier
        (variable_identifier)))))
