test/corpus/classes-and-objects/built-in-classes.txt
================
Built-in classes
================

Object;
Event;
Shred;
UGen;
UAna;
GGen;

---

(source_file
  (statement
    (member_identifier
      (reference_type)))
  (statement
    (member_identifier
      (reference_type)))
  (statement
    (member_identifier
      (class_identifier)))
  (statement
    (member_identifier
      (reference_type)))
  (statement
    (member_identifier
      (class_identifier)))
  (statement
    (member_identifier
      (class_identifier))))
