test/corpus/classes-and-objects/learning-about-objects-with-help.txt
====================================
Learning about objects with .help()
====================================

// call help() on it to learn about a class and its API
// (the output is printed to the chuck console)
SinOsc.help();

---

(source_file
 (comment)
 (comment)
  (statement
    (function_call
      (member_identifier
        (class_identifier)
        (variable_identifier)))))
