test/corpus/comments.txt
========
Comments
========

// this is a comment
int foo; // another comment

/*
   this is a block comment
   still going...
*/

---

(source_file
  (comment)
  (variable_declaration)
  (comment)
  (comment))
