test/corpus/concurrency-processes-shreds/command-line-arguments.txt
==========================================
Machine.add() with command line arguments
==========================================

// add foo.ck
// pass foo and bar as command line arguments
Machine.add( "foo.ck:foo:bar" ) => int id;

// replace shred with "bar.ck"
// pass foo and bar as command line arguments
Machine.replace( id, "bar.ck:foo:bar" );

---

(source_file
  (comment)
  (comment)
  (statement
    (chuck_operation
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier))
        (string))
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (variable_identifier))))
  (comment)
  (comment)
  (statement
    (function_call
      (member_identifier
        (class_identifier)
        (variable_identifier))
      (member_identifier
        (variable_identifier))
      (string))))

===============
Argument access
===============

// print out all arguments
for( int i; i < me.args(); i++ )
    <<< me.arg( i ) >>>;

---

(source_file
  (comment)
  (for_loop
    (variable_declaration
      (primitive_type)
      (variable_identifier))
    (binary_expression
      (member_identifier
        (variable_identifier))
      (operator)
      (function_call
        (member_identifier
          (variable_identifier))))
    (increment_expression
      (member_identifier
        (variable_identifier)))
    (statement
      (debug_print
        (function_call
          (member_identifier
            (variable_identifier))
          (member_identifier
            (variable_identifier)))))))
