test/corpus/concurrency-processes-shreds/the-me-keyword.txt
================
The "me" keyword
================

// spork shred
spork ~ go();

// suspend the current shred ...
// ... give other shreds (shreduled for 'now') a chance to run
me.yield();

---

(source_file
  (comment)
  (statement
    (spork_expression
      (function_call
        (variable_identifier))))
  (comment)
  (comment)
  (statement
    (function_call
      (member_identifier
        (variable_identifier)))))

=================
Exiting the shred
=================

// make a MidiIn object
MidiIn min;

// try to open device 0 (chuck --probe to list all device)
if( !min.open( 0 ) )
{
    // print error message
    <<< "can't open MIDI device" >>>;
    // exit the current shred
    me.exit();
}

---

(source_file
  (comment)
  (statement
    (variable_declaration
      (class_identifier)
      (variable_identifier)))
  (comment)
  (conditional
    (negation_expression
      (function_call
        (member_identifier
          (variable_identifier)
          (variable_identifier))
        (int)))
    (block
      (comment)
      (statement
        (debug_print
          (string)))
      (comment)
      (statement
        (function_call
          (member_identifier
            (variable_identifier)))))))

========
Shred ID
========

// print out the shred id
<<< me.id() >>>;

---

(source_file
  (comment)
  (statement
    (debug_print
      (function_call
        (member_identifier
          (variable_identifier))))))
