test/corpus/concurrency-processes-shreds/using-machine-add.txt
======
Adding
======

// spork "foo.ck"
Machine.add( "foo.ck" );

---

(source_file
  (comment)
  (statement
    (function_call
      (member_identifier
        (class_identifier)
        (variable_identifier))
      (string))))

========
Removing
========

// add
Machine.add( "foo.ck" ) => int id;

// remove shred with id
Machine.remove( id );

// add
Machine.add( "boo.ck" ) => id;

// replace shred with "bar.ck"
Machine.replace( id, "bar.ck" );

---

(source_file
  (comment)
  (statement
    (chuck_operation
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier))
        (string))
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (variable_identifier))))
  (comment)
  (statement
    (function_call
      (member_identifier
        (class_identifier)
        (variable_identifier))
      (member_identifier
        (variable_identifier))))
  (comment)
  (statement
    (chuck_operation
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier))
        (string))
      (chuck_operator)
      (member_identifier
        (variable_identifier))))
  (comment)
  (statement
    (function_call
      (member_identifier
        (class_identifier)
        (variable_identifier))
      (member_identifier
        (variable_identifier))
      (string))))
