test/corpus/control-structures/for.txt
===
For
===

// for loop
for( 0 => int foo; foo < 4 ; foo++ )
{
    // debug-print value of 'foo'
    <<< foo >>>;
}

---

(source_file
  (comment)
  (for_loop
    (chuck_operation
      (int)
      (variable_declaration
        (primitive_type)
        (variable_identifier)))
    (binary_expression
      (variable_identifier)
      (operator)
      (int))
    (increment_expression
      (variable_identifier))
    (block
      (comment)
      (debug_print
        (variable_identifier)))))
