test/corpus/control-structures/if-else.txt
===========
Conditional
===========

if( condition )
{
    // insert code here
}

---

(source_file
  (conditional
    (variable_identifier)
    (block
      (comment))))

=======
If/else
=======

if( condition )
{
    // your code here
}
else
{
    // your other code here
}

---

(source_file
  (conditional
    (variable_identifier)
    (block
      (comment))
    (block
      (comment))))
