test/corpus/debug-print.txt
===========
Debug print
===========

5 => int i;
<<<i>>>;

<<<"hello!">>>;

<<<1.0 + 2.5 >>>=> float x;

<<<"the value of x is" , x >>>;

<<<"4 + 5 is", 4 + 5>>>;

<<<"here are 3 random numbers",
    Std.rand2(0,9),
    Std.rand2(0,9),
    Std.rand2(0,9) >>>;

---

(source_file
  (chuck_operation
    (number)
    (variable_declaration
      (type)
      (variable)))
  (debug_print
    (variable))
  (debug_print
    (string))
  (chuck_operation
    (debug_print
      (operation
        (number)
      (operator)
      (number)))
    (variable_declaration
      (type)
      (variable)))
  (debug_print
    (string)
    (variable))
  (debug_print
    (string)
    (operation
      (number)
      (operator)
      (number)))
  (debug_print
    (string)
    (function_call
      (member_identifier
        (class_identifier)
        (variable))
      (number)
      (number))
    (function_call
      (member_identifier
        (class_identifier)
        (variable))
      (number)
      (number))
    (function_call
      (member_identifier
        (class_identifier)
        (variable))
      (number)
      (number))))
