test/corpus/events/use.txt
====================
ChucKing to an Event
====================

// declare Event
Event e;

// ...

// wait on the event
e => now;

// after the event is trigger
<<< "I just woke up" >>>;

---

(source_file
  (comment)
  (statement
    (variable_declaration
      (reference_type)
      (variable_identifier)))
  (comment)
  (comment)
  (statement
    (chuck_operation
      (variable_identifier)
      (chuck_operator)
      (keyword
        (special_literal_value))))
  (comment)
  (statement
    (debug_print
      (string))))

================
Signal one shred
================

// signal one shred waiting on the event e
e.signal();

---

(source_file
  (comment)
  (statement
    (function_call
      (member_identifier
        (variable_identifier)
        (variable_identifier)))))

==================
Wake up all shreds
==================

// wake up all shreds waiting on the event e
e.broadcast();

---

(source_file
  (comment)
  (statement
    (function_call
      (member_identifier
        (variable_identifier)
        (variable_identifier)))))
