test/corpus/examples/ai/features/centroid.txt
========
Centroid
========

//---------------------------------------------------------------------
// name: centroid.ck
// desc: fantastic audio features and where to extract them:
//       extracting spectral centroid; also demonstrates using
//       unit analyzers (UAna), connecting them using the
//       upchuck operator (=^), and getting results
//
// author: Ge Wang (https://ccrma.stanford.edu/~ge/)
// date: Spring 2023
//---------------------------------------------------------------------

// synthesis / analysis network
SinOsc foo => FFT fft =^ Centroid centroid => blackhole;
// set sine frequency
440 => foo.freq;

// set FFT size
1024 => fft.size;
// set window type and size
Windowing.hann(fft.size()) => fft.window;
// our hop size (how often to perform analysis)
fft.size()::samp => dur HOP;
// compute srate
second / samp => float srate;

// let one FFT-size of time pass (to buffer)
fft.size()::samp => now;
// control loop
while( true )
{
    //----------------------------------------------------------------
    // upchuck() computes our centroid, automatically computing upstream
    // dependencies connected to it using =^ (e.g., FFT)
    //----------------------------------------------------------------
    centroid.upchuck();

    // get and print the output
    <<< "centroid (hz):", centroid.fval(0) * srate / 2 >>>;

    // advance time
    HOP => now;
}


---

(source_file
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (statement
    (chuck_operation
      (chuck_operation
        (chuck_operation
          (variable_declaration
            (class_identifier)
            (variable_identifier))
          (chuck_operator)
          (variable_declaration
            (class_identifier)
            (variable_identifier)))
        (chuck_operator)
        (variable_declaration
          (class_identifier)
          (variable_identifier)))
      (chuck_operator)
      (keyword
        (global_unit_generator))))
  (line_comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier))
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier))))
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (dur
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier)))
        (duration_identifier))
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (class_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (binary_expression
        (keyword
          (duration_identifier))
        (operator)
        (keyword
          (duration_identifier)))
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (dur
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier)))
        (duration_identifier))
      (chuck_operator)
      (keyword
        (special_literal_value))))
  (line_comment)
  (loop
    (keyword
      (boolean_literal_value))
    (block
      (line_comment)
      (line_comment)
      (line_comment)
      (line_comment)
      (statement
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier))))
      (line_comment)
      (statement
        (debug_print
          (string)
          (binary_expression
            (binary_expression
              (function_call
                (member_identifier
                  (variable_identifier)
                  (variable_identifier))
                (int))
              (operator)
              (variable_identifier))
            (operator)
            (int))))
      (line_comment)
      (statement
        (chuck_operation
          (class_identifier)
          (chuck_operator)
          (keyword
            (special_literal_value)))))))
